# upi-fraud-detection

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
dataset/: upi_fraud_dataset.csv
filesuse/: project_model1.h5
notebooks/: UPI_Fraud_Detection.ipynb
src/: build_model.ipynb
templates/: chart.html  first.html  index.html  login.html  preview.html  result.html  upload.html
