[project]
name = "upifrauddetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "keras>=3.12.1",
    "markdown>=3.10.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "protobuf>=7.34.1",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "tensorflow>=2.21.0",
]
